fixing mobile overflow

--- a/style.css
+++ b/style.css
@@ -50,7 +50,8 @@ a {
 }
 
 .welcome {
-    font-size: 100px;
+    font-size: 80px;
+    padding: 20px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-transform: uppercase;
     color: white;
@@ -90,13 +91,28 @@ span {
     margin: auto;
 }
 
-img {
+.banner_icon {
     width: 60px;
 }
 
 .BannerDescription {
     margin-top: 10px;
 }
+.highlights {
 
+}
+.vacations {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 700px;
+    justify-content: center;
+    margin: auto;
+    gap: 1rem;
+}
 
+.highlights-image {
+    width: 300px;
+    border-radius: 10px;
+    box-shadow: 5px 10px gainsboro;
+}
 
